Changed how i check for the 'allowedCountries'

--- a/client/src/components/Register.css
+++ b/client/src/components/Register.css
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 
-.container>div {
+.container > div {
   padding: 50px;
   flex: 1;
 }
@@ -19,7 +19,7 @@
   flex-direction: column;
 }
 
-.form>* {
+.form > * {
   flex: 1;
   font-size: 1.5em;
   padding: 10px;
@@ -35,20 +35,18 @@
   padding: 10px;
   border: 1px black solid;
   background-color: transparent;
-  transition: box-shadow .2s ease-in-out;
+  transition: box-shadow 0.2s ease-in-out;
 }
 
 .registerBtn:hover {
   box-shadow: 0 1px 2px 1px black;
 }
 
-.check>* {
-
+.check > * {
   font-size: 1.2em;
   padding: 10px;
 }
 
 .statusBack {
   color: #e64848;
-
 }
